// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for algebraCAS 1`] = `
{
  "buttons": 16,
  "circles": 0,
  "inputs": 2,
  "lengthBucket": 43,
  "paths": 0,
  "sha": "5ee9cc9ebbcdae33",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for calculus 1`] = `
{
  "buttons": 30,
  "circles": 1,
  "inputs": 9,
  "lengthBucket": 139,
  "paths": 0,
  "sha": "17368db0b5e3918c",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataPlot 1`] = `
{
  "buttons": 31,
  "circles": 0,
  "inputs": 9,
  "lengthBucket": 64,
  "paths": 0,
  "sha": "6415c9c3564f61d8",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for dataStudio 1`] = `
{
  "buttons": 36,
  "circles": 0,
  "inputs": 21,
  "lengthBucket": 105,
  "paths": 0,
  "sha": "f0ac0c5ed4326f2a",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for funcGrapher 1`] = `
{
  "buttons": 53,
  "circles": 4,
  "inputs": 10,
  "lengthBucket": 201,
  "paths": 1,
  "sha": "17ece51c16358c36",
  "svgs": 2,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geoQuiz 1`] = `
{
  "buttons": 12,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 47,
  "paths": 0,
  "sha": "3e67a17fe24bddd0",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for geometryProver 1`] = `
{
  "buttons": 17,
  "circles": 0,
  "inputs": 0,
  "lengthBucket": 48,
  "paths": 0,
  "sha": "28bdec10e1fd4bec",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for graphCalc 1`] = `
{
  "buttons": 27,
  "circles": 0,
  "inputs": 6,
  "lengthBucket": 82,
  "paths": 0,
  "sha": "5179cb5a7aae737c",
  "svgs": 0,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for inequality 1`] = `
{
  "buttons": 30,
  "circles": 0,
  "inputs": 7,
  "lengthBucket": 100,
  "paths": 0,
  "sha": "4f843bda33827d81",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for logicLab 1`] = `
{
  "buttons": 39,
  "circles": 3,
  "inputs": 1,
  "lengthBucket": 119,
  "paths": 1,
  "sha": "c58778b470d4703b",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for probability 1`] = `
{
  "buttons": 32,
  "circles": 5,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 1,
  "sha": "cbc48244efee74da",
  "svgs": 1,
}
`;

exports[`math/logic graph cluster render goldens (default state) > renders + pins a digest for unitConvert 1`] = `
{
  "buttons": 23,
  "circles": 0,
  "inputs": 2,
  "lengthBucket": 92,
  "paths": 0,
  "sha": "2df4a934507e1b82",
  "svgs": 0,
}
`;
